# cli-anything-cloudmusic

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  LICENSE  NETEASE_CLOUDMUSIC.md  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
cli_anything/: __init__.py
cli_anything/cloudmusic/: README.md  __init__.py  __main__.py  cloudmusic_cli.py
cli_anything/cloudmusic/core/: __init__.py  playback.py  track.py  volume.py
cli_anything/cloudmusic/skills/: SKILL.md
cli_anything/cloudmusic/tests/: TEST.md  test_core.py  test_e2e.py
cli_anything/cloudmusic/utils/: __init__.py  cloudmusic_backend.py  window_detector.py
